--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
             <h2>Time Until Our Anniversary:</h2>
             <p id="countdown"></p>
         </div>
+        
+        <!-- Pesan Spesial Setelah Countdown -->
+        <div id="specialMessage" class="special-message" style="display: none;">
+            <h2>Happy 1st Anniversary, my love!</h2>
+            <p>One year ago, our journey began, and even though we’re miles apart, my heart feels closer to you every single day. You’ve filled my life with love, warmth, and happiness in ways I never thought possible.</p>
+            <p>Distance may keep us physically apart, but it can never dim the connection we share. Over this year, I’ve cherished every moment I’ve been able to see your face through pictures or on FaceTime. Those little glimpses of you have brought me so much joy and strength, reminding me why this love is worth everything.</p>
+            <p>I adore so many things about you, Şeyma—how you speak with such charm, how your body language makes every word more meaningful, and how incredibly funny you are. And your beauty… it’s beyond words. To me, you’re as radiant as an angel, and every time I see you, I fall in love all over again.</p>
+            <p>Our journey hasn’t always been easy. I still remember how your dad initially disapproved of our relationship and even took your phone away. Yet, I refused to give up because I knew how much you meant to me. I’ll forever be grateful to your friend, Hanni, for helping us stay connected when things were tough, and to your mom for her support and encouragement in our relationship.</p>
+            <p>Şeyma, I hope the future holds nothing but happiness and blessings for us. I pray that our bond continues to grow stronger and that the situation with your family will only improve, bringing us closer together.</p>
+            <p>Thank you for being my love, my angel, and my everything. I love you more than words can express.</p>
+            <p>With all my heart,<br>[Danu Asmara]</p>
+        </div>
+        
         <div class="images">
             <img src="photo1.jpg" alt="Memories" class="photo">
             <img src="photo2.jpg" alt="Memories" class="photo">
